--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
+<meta http-equiv="Refresh" content="0; url=https://goo.gl/maps/Ftny5mmZbNnARed97" />
 
-<body>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3849.044951640667!2d73.9588981499647!3d15.265344264481389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbfb3c1d24f7c1b%3A0x8803b8a2d8df83a9!2sDaivadnya%20Bhavan%20Margao!5e0!3m2!1sen!2sin!4v1579934017927!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-</body>
+
 </html>
